# brainmaze_sigfusion

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
documents/: sw_req.md
software_requirements/: design_req.md  sw_req.md  test_signal_fixture_design.md
src/brainmaze_sigcoreg/: __init__.py  _version.py  coregistered_reader.py  coregistration.py
src/brainmaze_sigcoreg.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_coregistered_reader.py  test_coregistration.py  test_coregistration_smoothness.py  test_fixtures.py  test_version.py
